Make title font smaller to prevent line break on mobile

--- a/src/pages/SplashPage/SplashPage.css
+++ b/src/pages/SplashPage/SplashPage.css
@@ -9,7 +9,7 @@
 :local(.Header h1) {
   border-left: none;
   padding: 0;
-  font-size: calc(1rem + 7vmin);
+  font-size: calc(1rem + 6vmin);
 }
 :local(.Header p) {
   padding: 0 10vw;
